Z-index solved link issue on resize

--- a/app/assets/stylesheets/unstructured/_discussions.css.scss
+++ b/app/assets/stylesheets/unstructured/_discussions.css.scss
@@ -641,6 +641,8 @@ pre{
   }
   .discussion-title {
     display: inline;
+    position: relative;
+    z-index: 4;
     float: left;
   }
   .group-name {
